--- a/games/fireemblemthreehousescharacterfigure/index.html
+++ b/games/fireemblemthreehousescharacterfigure/index.html
@@ -91,7 +91,7 @@ document.addEventListener("visibilitychange", function () {
   
   
   
-  <link rel="stylesheet" href="https://txtxj.top/assets/css/style.min.7acbb80c25ca5b5806306b4858f3e2d35bfbcad5bd3afea3271ca2ce38d47e65.css" integrity="sha256-esu4DCXKW1gGMGtIWPPi01v7ytW9Ov6jJxyizjjUfmU=">
+  <link rel="stylesheet" href="https://txtxj.top/assets/css/style.min.2fdfc79dad654ae8f2ab6e09f7e46d1196d098ad4d3e8bcceeed269d3457318c.css" integrity="sha256-L9/Hna1lSujyq24J9&#43;RtEZbQmK1NPovM7u0mnTRXMYw=">
 
   <script src="https://txtxj.top/assets/js/main.min.02c6f5c1a681332122b4761eba4bf2a5df10c7f5e08ca75bae52bbf648c05b7f.js" integrity="sha256-Asb1waaBMyEitHYeukvypd8Qx/XgjKdbrlK79kjAW38="></script>
   
