--- a/index.html
+++ b/index.html
@@ -68,16 +68,16 @@ document.addEventListener("visibilitychange", function () {
   
   
   
-  <title>Txtxj ΦωΦ</title>
+  <title>Txtxj</title>
 
-  <meta property="og:title" content="Txtxj ΦωΦ" />
+  <meta property="og:title" content="Txtxj" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://txtxj.top/" />
 
 
   <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Txtxj ΦωΦ"/>
+<meta name="twitter:title" content="Txtxj"/>
 <meta name="twitter:description" content=""/>
 
 
@@ -85,15 +85,15 @@ document.addEventListener("visibilitychange", function () {
   
   
   
-  <link rel="stylesheet" href="https://txtxj.top/assets/css/style.min.84112d7e378181b51b2489c38fca395fe1a2d2601ebc76cb8a0fd591419b4f41.css" integrity="sha256-hBEtfjeBgbUbJInDj8o5X&#43;Gi0mAevHbLig/VkUGbT0E=">
+  <link rel="stylesheet" href="https://txtxj.top/assets/css/style.min.ba3eb9c627adee08299790db29c03a5b64a1fde64d4e18c55fb3423507f153ef.css" integrity="sha256-uj65xiet7ggpl5DbKcA6W2Sh/eZNThjFX7NCNQfxU&#43;8=">
 
   <script src="https://txtxj.top/assets/js/main.min.02c6f5c1a681332122b4761eba4bf2a5df10c7f5e08ca75bae52bbf648c05b7f.js" integrity="sha256-Asb1waaBMyEitHYeukvypd8Qx/XgjKdbrlK79kjAW38="></script>
   
-  <link rel="alternate" type="application/rss+xml" href="https://txtxj.top/index.xml" title="Txtxj ΦωΦ" />
+  <link rel="alternate" type="application/rss+xml" href="https://txtxj.top/index.xml" title="Txtxj" />
   </head><body><header class="header-container layout-block layout-padding">
   <div class="header-inner content-padding-large soft-size--large soft-style--box">
     <div class="header-logo">
-      <a href="https://txtxj.top"><h1>Txtxj ΦωΦ</h1></a>
+      <a href="https://txtxj.top"><h1><img class="author-avatar soft-size--round soft-style--box" src="https://i.loli.net/2021/07/31/Txvq78fELy6ZCN1.jpg" alt="Txtxj">&nbspTxtxj</h1></a>
     </div>
     <nav class="header-nav">
       <div class="header-nav--btn">
