--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ document.addEventListener("visibilitychange", function () {
     
       <div class="article-item ">
   <section class="article-card card-container content-padding-large soft-size--large soft-style--box">
-    <div class="card-cover" ></div>
+    <div class="card-cover" background-image-lazy data-img="https://s2.loli.net/2022/01/05/Lkz73Iro9D158ed.jpg"></div>
     <div class="card-text">
       <a href="https://txtxj.top/posts/gamesnote03/"><h4 class="card-text--title">GAMES笔记03-光栅化</h4></a>
 
