--- a/link/index.html
+++ b/link/index.html
@@ -91,7 +91,7 @@ document.addEventListener("visibilitychange", function () {
   
   
   
-  <link rel="stylesheet" href="https://txtxj.top/assets/css/style.min.7767802ca28d5478bdc36e53c1e7e13cc54cc37c1924c35b9e00754066d927c8.css" integrity="sha256-d2eALKKNVHi9w25TwefhPMVMw3wZJMNbngB1QGbZJ8g=">
+  <link rel="stylesheet" href="https://txtxj.top/assets/css/style.min.e8c96d78c4b9728e1b904798e4acd1adcfaf1b97fa94cacc7b7c16f8e146018a.css" integrity="sha256-6MlteMS5co4bkEeY5KzRrc&#43;vG5f6lMrMe3wW&#43;OFGAYo=">
 
   <script src="https://txtxj.top/assets/js/main.min.597d9f5a80ce3137282a06b1b2cdbb5a481f3ae5ef0d0ba4265c177b6d788b36.js" integrity="sha256-WX2fWoDOMTcoKgaxss27WkgfOuXvDQukJlwXe214izY="></script>
   
@@ -335,7 +335,9 @@ document.addEventListener("visibilitychange", function () {
     <a href="javascript:;" id="theme-dark">🌛 深色</a>
     <a href="javascript:;" id="theme-auto">🤖️ 自动</a>
   </p>
+  <script src="/js/copy.js"></script>
 </footer>
+
 
 
 
