--- a/link/index.html
+++ b/link/index.html
@@ -91,7 +91,7 @@ document.addEventListener("visibilitychange", function () {
   
   
   
-  <link rel="stylesheet" href="https://txtxj.top/assets/css/style.min.7056805745e993f44817ae2dbd86a09b694aa7d27460741361bd060c8fa2def2.css" integrity="sha256-cFaAV0Xpk/RIF64tvYagm2lKp9J0YHQTYb0GDI&#43;i3vI=">
+  <link rel="stylesheet" href="https://txtxj.top/assets/css/style.min.72ee164fcc6cd5d67058960ba86c96642c0b1d72395a320eb25164240acf106a.css" integrity="sha256-cu4WT8xs1dZwWJYLqGyWZCwLHXI5WjIOslFkJArPEGo=">
 
   <script src="https://txtxj.top/assets/js/main.min.597d9f5a80ce3137282a06b1b2cdbb5a481f3ae5ef0d0ba4265c177b6d788b36.js" integrity="sha256-WX2fWoDOMTcoKgaxss27WkgfOuXvDQukJlwXe214izY="></script>
   
