--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
     
     <link rel="stylesheet" href="https://txtxj.top/assets/css/404.min.5b24fc8aab3310e5aee9215e8f2897cb4c3222b6ebcdc9f089aa2c1745f1bc21.css" integrity="sha256-WyT8iqszEOWu6SFejyiXy0wyIrbrzcnwiaosF0XxvCE=">
 
-    <script src="https://txtxj.top/assets/js/404.min.95c9cb852ab1d63b7c6a94d71b0dfdd928340d4307a77bdc88fb9f03b08a17e1.js" integrity="sha256-lcnLhSqx1jt8apTXGw392Sg0DUMHp3vciPufA7CKF&#43;E="></script>
+    <script src="https://txtxj.top/assets/js/404.min.ca2cc45f594fab8f2de4f35d5b0ea699c73df22d83944e767ec531fefdf4ec6b.js" integrity="sha256-yizEX1lPq48t5PNdWw6mmcc98i2DlE52fsUx/v307Gs="></script>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display:wght@900&display=swap" rel="stylesheet">
